--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ label{
     font-size: 20px;
 }
 
+input{
+    font-size: 25px;
+}
 :checked + label{
     text-decoration: line-through;
     color: grey;
