--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,40 @@
 body{
-    background-color: powderblue;
+    margin-left: 50px;
+    margin-top: 50px;
+    background-color: rgb(71, 75, 76);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 label{
-    font-size: 20px;
+
+    color: white;
 }
 
 input{
-    font-size: 25px;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgb(201, 201, 201);
 }
 :checked + label{
     text-decoration: line-through;
     color: grey;
 
 }
+li{
+    text-align: justify;
+
+}
+
+h1{
+    margin-left: 20px;
+    font-size: 30px;
+    color: white;
+}
 
 button{
+    color: white;
     font-size: 20px;
-    background-color: powderblue;
+    background-color: rgb(71, 75, 76);
     border: none;
 }
 
