--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 body{
-    
     margin-left: 50px;
     margin-top: 50px;
     background-color: rgb(71, 75, 76);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: sans-serif;
 }
 
 label{
